--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
  -->
 <head>
 <meta charset="ISO-8859-1">
-<link rel="stylesheet" type ="text/css" href="styles.css" />
+<link rel="stylesheet" type ="text/css" href="style.css" />
 <title>Registration Form</title>
 </head>
 <body>
