--- a/register.html
+++ b/register.html
@@ -18,15 +18,15 @@
 		    <p>Please fill out this form to <i>create*</i> an account.</p>
 		    <hr>
 			<label for="firstname">First Name:</label>
-			<input type="text" id="firstname" name="firstname"><br><br>
+			<input type="text" id="firstname" name="firstname">
 			<label for="lastname">Last Name:</label>
-			<input type="text" id="lastname" name="lastname"><br><br>
+			<input type="text" id="lastname" name="lastname">
 			<label for="DOB">Date of Birth:</label>
-			<input type="date" id="DOB" name="DOB"><br><br>
+			<input type="date" id="DOB" name="DOB">
 			<label for="username">Username:</label>
-			<input type="text" id="username" name="username"><br><br>
+			<input type="text" id="username" name="username">
 			<label for="password">Password:</label>
-			<input type="password" id="password" name="password"><br><br>
+			<input type="password" id="password" name="password">
 			<input type="submit" class="registerbtn" value="Submit">
 		</div>
 	</form>
