--- a/register.html
+++ b/register.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <!--
- * Project name: CST126 Milestone 1: Registration
+ * Project name: CST126 Milestone 2: Login
  * Programmer: Isaac Tucker
- * Date: 12/18/2020
- * Short synopsis: Here we create the form with minimal CSS to register a user into the database on the pageHandler.php file.
+ * Date: 01/06/2021
+ * Short synopsis: Here we create the form with minimal CSS to register a user into the database on the registerHandler.php file.
  -->
 <head>
 <meta charset="ISO-8859-1">
@@ -12,7 +12,7 @@
 <title>Registration Form</title>
 </head>
 <body>
-	<form action="/cst126milestone/pageHandler.php" method="post">
+	<form action="/cst126milestone/registerHandler.php" method="post">
 		<div class="container">
 		    <h1>Register</h1>
 		    <p>Please fill out this form to <i>create*</i> an account.</p>
@@ -27,8 +27,9 @@
 			<input type="text" id="username" name="username">
 			<label for="password">Password:</label>
 			<input type="password" id="password" name="password">
-			<input type="submit" class="registerbtn" value="Submit">
+			<input type="submit" class="regbtn" value="Submit">
 		</div>
 	</form>
+<p><a href="index.html">Home</a>
 </body>
 </html>
