--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <!--
  * Project name: CST126 Milestone 2: Login
  * Programmer: Isaac Tucker
- * Date: 01/06/2021
- * Short synopsis: Here we create the index main page to provide access to login and register pages.
+ * Date: 01/14/2021
+ * Short synopsis: This index.html will redirect to index.php
  -->
 <meta charset="ISO-8859-1">
-<title>CST126: Milestone Index</title>
+<title>CST126: Milestone</title>
+<meta http-equiv="refresh" content="0; URL=./index.php" />
 </head>
-<body>
-<h2>CST126: Milestone</h2>
-<a href="login.html">Login</a><br>
-<a href="register.html">Register</a><br>
-</body>
+<body></body>
 </html>
