--- a/login.html
+++ b/login.html
@@ -23,6 +23,6 @@
 			<input type="submit" class="regbtn" value="Submit">
 		</div>
 	</form>
-<p><a href="index.html">Home</a>
+<p>If you do not have an account, click <a href="register.html" style="color: blue"> here to register first</a></p>
 </body>
 </html>
