--- a/register.html
+++ b/register.html
@@ -30,6 +30,6 @@
 			<input type="submit" class="regbtn" value="Submit">
 		</div>
 	</form>
-<p>If you already have an account, click <a href="login.html" style="color: blue"> here to register first</a></p>
+<p>If you already have an account, click <a href="login.html" style="color: blue"> here to login first</a></p>
 </body>
 </html>
